--- a/terraform/cloudbuild.yaml
+++ b/terraform/cloudbuild.yaml
@@ -20,8 +20,4 @@ steps:
   env:
     - "TF_VAR_project-name=${PROJECT_ID}"
 substitutions:
-    _BUCKET: # Provide your own bucket name
-
-
-
-
+    _BUCKET: ${PROJECT_ID}-terraform-state
