--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,18 +7,22 @@ steps:
     '-backend-config=bucket=${_BUCKET}']
   env:
     - "TF_VAR_project-name=${PROJECT_ID}"
+  dir: terraform
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['plan']
   env:
     - "TF_VAR_project-name=${PROJECT_ID}"
+  dir: terraform
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['apply', '-auto-approve']
   env:
     - "TF_VAR_project-name=${PROJECT_ID}"
+  dir: terraform
 #- name: 'gcr.io/${PROJECT_ID}/terraform'
 #  args: ['destroy', '-auto-approve']
 #  env:
 #    - "TF_VAR_project-name=${PROJECT_ID}"
+#  dir: terraform
 substitutions:
     _BUCKET: ${PROJECT_ID}-terraform-state
     _REGION: us-east-1d
