--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,9 +3,9 @@
 steps:
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['init',
-    '-backend-config=project-name=${PROJECT_ID}',
-    '-backend-config=bucket=${_BUCKET}',
-    '-backend-config=region=${_REGION}']
+    '-backend-config="project-name=${PROJECT_ID}"',
+    '-backend-config="bucket=${_BUCKET}"',
+    '-backend-config="region=${_REGION}"']
   env:
     - "TF_VAR_project-name=${PROJECT_ID}"
   dir: terraform
