--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,8 +4,8 @@ steps:
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: ['init',
     '-backend-config="project-name=${PROJECT_ID}"',
-    '-backend-config="bucket=${PROJECT_ID}-terraform-state"',
-    '-backend-config="region=${_REGION}"']
+    #'-backend-config="bucket=${PROJECT_ID}-terraform-state"',
+    #'-backend-config="region=${_REGION}"']
   env:
     - "TF_VAR_project-name=${PROJECT_ID}"
   dir: terraform
