--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,10 +2,9 @@
 # $ gcloud builds submit . --config=cloudbuild.yaml --substitutions _BUCKET='<bucket name>'
 steps:
 - name: 'gcr.io/${PROJECT_ID}/terraform'
-  args: ['init',
-    '-backend-config="project-name=${PROJECT_ID}"',
-    #'-backend-config="bucket=${PROJECT_ID}-terraform-state"',
-    #'-backend-config="region=${_REGION}"']
+  args: 
+    - 'init'
+    - '-backend-config="project-name=${PROJECT_ID}"'
   env:
     - "TF_VAR_project-name=${PROJECT_ID}"
   dir: terraform
