--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,8 +4,8 @@ steps:
 - name: 'gcr.io/${PROJECT_ID}/terraform'
   args: 
     - 'init'
-    - '-backend-config=bucket=${PROJECT_ID}-terraform-state'
-    - '-backend-config=prefix=terraform-state'
+    - '-backend-config="bucket=${PROJECT_ID}-terraform-state"'
+    - '-backend-config="prefix=terraform-state"'
   env:
     - "TF_VAR_project-name=${PROJECT_ID}"
   dir: terraform
